--- a/index.html
+++ b/index.html
@@ -1,52 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Prime A Society</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <style>
+    :root {
+      --bg: #0d1117;
+      --fg: #e6edf3;
+      --muted: #9da7b3;
+      --accent: #58a6ff;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background: #0b0f19;
-      color: #eaeaea;
+      font-family: system-ui, -apple-system, sans-serif;
+      background: var(--bg);
+      color: var(--fg);
+      line-height: 1.6;
+    }
+
+    header {
+      position: sticky;
+      top: 0;
+      background: #010409;
+      border-bottom: 1px solid #21262d;
+      padding: 12px 20px;
+      z-index: 10;
+    }
+
+    nav {
+      max-width: 900px;
+      margin: auto;
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
-      height: 100vh;
-      text-align: center;
     }
-    .box {
-      max-width: 600px;
+
+    nav a {
+      color: var(--fg);
+      text-decoration: none;
+      margin-left: 16px;
+      font-size: 0.95rem;
     }
-    h1 {
-      font-size: 2.5rem;
+
+    nav a:hover {
+      color: var(--accent);
+    }
+
+    section {
+      max-width: 900px;
+      margin: auto;
+      padding: 70px 20px;
+    }
+
+    h1, h2 {
       margin-bottom: 10px;
     }
-    p {
-      font-size: 1.1rem;
-      line-height: 1.6;
-      opacity: 0.9;
+
+    h1 {
+      font-size: 2.6rem;
     }
+
+    h2 {
+      font-size: 1.8rem;
+    }
+
+    p {
+      color: var(--muted);
+      max-width: 700px;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+      margin-top: 25px;
+    }
+
+    .card {
+      border: 1px solid #21262d;
+      border-radius: 10px;
+      padding: 20px;
+      background: #010409;
+    }
+
     footer {
-      margin-top: 20px;
+      text-align: center;
+      padding: 40px 20px;
+      border-top: 1px solid #21262d;
       font-size: 0.9rem;
-      opacity: 0.6;
+      color: var(--muted);
     }
   </style>
 </head>
+
 <body>
-  <div class="box">
-    <h1>Prime A Society</h1>
-    <p>
-      A student-led community focused on mathematics, science,
-      logical reasoning, and deep thinking.
-    </p>
-    <p>
-      We discuss primes, conjectures, proofs, and the beauty of pure ideas.
-    </p>
-    <footer>
-      Seeking knowledge is an act of worship.
-    </footer>
+
+<header>
+  <nav>
+    <strong>Prime A Society</strong>
+    <div>
+      <a href="#about">About</a>
+      <a href="#focus">Focus</a>
+      <a href="#members">Members</a>
+      <a href="#join">Join</a>
+    </div>
+  </nav>
+</header>
+
+<section>
+  <h1>Prime A Society</h1>
+  <p>
+    A  community dedicated to mathematics, science,
+    logical rigor, and deep thinking. We value proofs over popularity.
+  </p>
+</section>
+
+<section id="about">
+  <h2>About</h2>
+  <p>
+    Prime A Society exists to explore ideas that are often ignored:
+    prime numbers, unsolved conjectures, olympiad-level reasoning,
+    and the structure beneath mathematical truth.
+  </p>
+  <p>
+    Knowledge is not entertainment. It is responsibility.
+  </p>
+</section>
+
+<section id="focus">
+  <h2>Our Focus</h2>
+  <div class="grid">
+    <div class="card">
+      <h3>Number Theory</h3>
+      <p>Primes, divisibility, modular arithmetic, conjectures.</p>
+    </div>
+    <div class="card">
+      <h3>Mathematical Proof</h3>
+      <p>How to think, not what to memorize.</p>
+    </div>
+    <div class="card">
+      <h3>Olympiads</h3>
+      <p>Problem-solving at national and international level.</p>
+    </div>
+    <div class="card">
+      <h3>Science & Logic</h3>
+      <p>Physics, astronomy, and reasoning beyond textbooks.</p>
+    </div>
   </div>
+</section>
+
+<section id="members">
+  <h2>Members</h2>
+  <p>
+    Prime A Society is built by students who take learning seriously.
+    Member list will be published soon.
+  </p>
+</section>
+
+<section id="join">
+  <h2>Join Us</h2>
+  <p>
+    If you value depth over hype and discipline over distraction,
+    you are welcome.
+  </p>
+  <p>
+    Contact or community link coming soon.
+  </p>
+  <p>
+    <em>“Rabbi zidni ilma.”</em>
+  </p>
+</section>
+
+<footer>
+  © 2025 Prime A Society — Where Prime number ends , Prime A begins.
+</footer>
+
 </body>
 </html>
