--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   <h2>Join Us</h2>
   <p>
     If you value depth over hype and discipline over distraction,
-    you are welcome.
+    you are welcome!
   </p>
   <p>
     Contact or community link coming soon.
