--- a/index.html
+++ b/index.html
@@ -1,185 +1,248 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Prime A Society</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<title>Prime A Society</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    :root {
-      --bg: #0d1117;
-      --fg: #e6edf3;
-      --muted: #9da7b3;
-      --accent: #58a6ff;
-    }
+<style>
+/* ------------------ GLOBAL ------------------ */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Segoe UI', sans-serif;
+}
 
-    * {
-      box-sizing: border-box;
-    }
+body {
+    background: linear-gradient(120deg, #0f2027, #203a43, #2c5364);
+    color: #ffffff;
+    overflow-x: hidden;
+}
 
-    body {
-      margin: 0;
-      font-family: system-ui, -apple-system, sans-serif;
-      background: var(--bg);
-      color: var(--fg);
-      line-height: 1.6;
-    }
+/* ------------------ ANIMATION ------------------ */
+@keyframes float {
+    0% { transform: translateY(0px); }
+    50% { transform: translateY(-10px); }
+    100% { transform: translateY(0px); }
+}
 
-    header {
-      position: sticky;
-      top: 0;
-      background: #010409;
-      border-bottom: 1px solid #21262d;
-      padding: 12px 20px;
-      z-index: 10;
-    }
+@keyframes fadeUp {
+    from { opacity: 0; transform: translateY(40px); }
+    to { opacity: 1; transform: translateY(0); }
+}
 
-    nav {
-      max-width: 900px;
-      margin: auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
+/* ------------------ HEADER ------------------ */
+header {
+    text-align: center;
+    padding: 60px 20px;
+}
 
-    nav a {
-      color: var(--fg);
-      text-decoration: none;
-      margin-left: 16px;
-      font-size: 0.95rem;
-    }
+header img {
+    width: 140px;
+    animation: float 3s ease-in-out infinite;
+}
 
-    nav a:hover {
-      color: var(--accent);
-    }
+header h1 {
+    font-size: 3rem;
+    margin-top: 20px;
+    color: #ffd369;
+}
 
-    section {
-      max-width: 900px;
-      margin: auto;
-      padding: 70px 20px;
-    }
+header p {
+    max-width: 700px;
+    margin: 15px auto;
+    font-size: 1.1rem;
+    opacity: 0.9;
+}
 
-    h1, h2 {
-      margin-bottom: 10px;
-    }
+/* ------------------ BUTTONS ------------------ */
+.btn {
+    display: inline-block;
+    padding: 12px 28px;
+    margin: 10px;
+    border-radius: 30px;
+    background: linear-gradient(45deg, #ffd369, #ff9f1c);
+    color: #000;
+    text-decoration: none;
+    font-weight: bold;
+    transition: 0.3s;
+}
 
-    h1 {
-      font-size: 2.6rem;
-    }
+.btn:hover {
+    transform: scale(1.08);
+}
 
-    h2 {
-      font-size: 1.8rem;
-    }
+/* ------------------ SECTIONS ------------------ */
+section {
+    padding: 70px 10%;
+    animation: fadeUp 1s ease forwards;
+}
 
-    p {
-      color: var(--muted);
-      max-width: 700px;
-    }
+.section-title {
+    font-size: 2.3rem;
+    color: #ffd369;
+    margin-bottom: 20px;
+    text-align: center;
+}
 
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-      margin-top: 25px;
-    }
+/* ------------------ CARDS ------------------ */
+.cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 25px;
+    margin-top: 40px;
+}
 
-    .card {
-      border: 1px solid #21262d;
-      border-radius: 10px;
-      padding: 20px;
-      background: #010409;
-    }
+.card {
+    background: rgba(255,255,255,0.08);
+    padding: 25px;
+    border-radius: 18px;
+    transition: 0.4s;
+}
 
-    footer {
-      text-align: center;
-      padding: 40px 20px;
-      border-top: 1px solid #21262d;
-      font-size: 0.9rem;
-      color: var(--muted);
-    }
-  </style>
+.card:hover {
+    transform: translateY(-12px);
+    background: rgba(255,255,255,0.15);
+}
+
+.card h3 {
+    color: #ffd369;
+    margin-bottom: 10px;
+}
+
+/* ------------------ RESOURCES ------------------ */
+.resources a {
+    display: block;
+    margin: 10px 0;
+    color: #ffd369;
+    text-decoration: none;
+}
+
+.resources a:hover {
+    text-decoration: underline;
+}
+
+/* ------------------ FOOTER ------------------ */
+footer {
+    background: rgba(0,0,0,0.5);
+    padding: 40px;
+    text-align: center;
+    margin-top: 50px;
+}
+
+footer p {
+    opacity: 0.8;
+}
+</style>
 </head>
 
 <body>
 
+<!-- ------------------ HEADER ------------------ -->
 <header>
-  <nav>
-    <strong>Prime A Society</strong>
-    <div>
-      <a href="#about">About</a>
-      <a href="#focus">Focus</a>
-      <a href="#members">Members</a>
-      <a href="#join">Join</a>
-    </div>
-  </nav>
+    <img src="logo.jpg" alt="Prime A Society Logo">
+    <h1>Prime A Society</h1>
+    <p>
+        A community for deep thinkers — mathematics, science, programming,
+        Olympiad-level problem solving and truth beyond textbooks.
+    </p>
+
+    <a href="DISCORD_LINK_HERE" class="btn">Join Our Discord</a>
+    <a href="FACEBOOK_LINK_HERE" class="btn">Facebook Page</a>
 </header>
 
+<!-- ------------------ ABOUT ------------------ -->
 <section>
-  <h1>Prime A Society</h1>
-  <p>
-    A  community dedicated to mathematics, science,
-    logical rigor, and deep thinking. We value proofs over popularity.
-  </p>
+    <h2 class="section-title">About Us</h2>
+    <p style="text-align:center; max-width:800px; margin:auto;">
+        Prime A Society is based in <b>Rajshahi, Bangladesh</b>.
+        We focus on mathematical beauty, scientific rigor,
+        competitive Olympiads, and programming skills.
+        Our goal is to build thinkers, not memorizers.
+    </p>
 </section>
 
-<section id="about">
-  <h2>About</h2>
-  <p>
-    Prime A Society exists to explore ideas that are often ignored:
-    prime numbers, unsolved conjectures, olympiad-level reasoning,
-    and the structure beneath mathematical truth.
-  </p>
-  <p>
-    Knowledge is not entertainment. It is responsibility.
-  </p>
-</section>
+<!-- ------------------ FIELDS ------------------ -->
+<section>
+    <h2 class="section-title">Our Fields</h2>
 
-<section id="focus">
-  <h2>Our Focus</h2>
-  <div class="grid">
-    <div class="card">
-      <h3>Number Theory</h3>
-      <p>Primes, divisibility, modular arithmetic, conjectures.</p>
+    <div class="cards">
+        <div class="card">
+            <h3>Mathematics</h3>
+            <p>
+                Number theory, prime numbers, proofs,
+                Olympiad mathematics (IMO, BDMO, APMO).
+            </p>
+        </div>
+
+        <div class="card">
+            <h3>Science</h3>
+            <p>
+                Physics, astronomy, logical reasoning,
+                experimental and theoretical thinking.
+            </p>
+        </div>
+
+        <div class="card">
+            <h3>Programming</h3>
+            <p>
+                C++, algorithms, problem solving,
+                competitive programming and projects.
+            </p>
+        </div>
     </div>
-    <div class="card">
-      <h3>Mathematical Proof</h3>
-      <p>How to think, not what to memorize.</p>
-    </div>
-    <div class="card">
-      <h3>Olympiads</h3>
-      <p>Problem-solving at national and international level.</p>
-    </div>
-    <div class="card">
-      <h3>Science & Logic</h3>
-      <p>Physics, astronomy, and reasoning beyond textbooks.</p>
-    </div>
-  </div>
 </section>
 
-<section id="members">
-  <h2>Members</h2>
-  <p>
-    Prime A Society is built by students who take learning seriously.
-    Member list will be published soon.
-  </p>
+<!-- ------------------ RESOURCES ------------------ -->
+<section class="resources">
+    <h2 class="section-title">Olympiad Resources</h2>
+
+    <div class="cards">
+        <div class="card">
+            <h3>Bangladesh</h3>
+            <a href="https://bdomo.org">Bangladesh Math Olympiad</a>
+            <a href="https://bdpho.org">Bangladesh Physics Olympiad</a>
+            <a href="https://bdao.org">Bangladesh Astronomy Olympiad</a>
+        </div>
+
+        <div class="card">
+            <h3>International</h3>
+            <a href="https://www.imo-official.org">IMO</a>
+            <a href="https://ipho-unofficial.org">IPhO</a>
+            <a href="https://ioaa2015.in">IOAA</a>
+        </div>
+    </div>
 </section>
 
-<section id="join">
-  <h2>Join Us</h2>
-  <p>
-    If you value depth over hype and discipline over distraction,
-    you are welcome!
-  </p>
-  <p>
-    Contact or community link coming soon.
-  </p>
-  <p>
-    <em>“Rabbi zidni ilma.”</em>
-  </p>
+<!-- ------------------ EVENTS ------------------ -->
+<section>
+    <h2 class="section-title">Events</h2>
+
+    <div class="cards">
+        <div class="card">
+            <h3>Weekly Problem Solving</h3>
+            <p>Online Discord sessions for Olympiad problems.</p>
+        </div>
+
+        <div class="card">
+            <h3>Workshops</h3>
+            <p>Math, science & programming workshops.</p>
+        </div>
+
+        <div class="card">
+            <h3>Competitions</h3>
+            <p>Internal contests and national Olympiad preparation.</p>
+        </div>
+    </div>
 </section>
 
+<!-- ------------------ CONTACT ------------------ -->
 <footer>
-  © 2025 Prime A Society — Where Prime number ends , Prime A begins.
+    <img src="logo.jpg" width="80"><br><br>
+    <p>📍 Rajshahi, Bangladesh</p>
+    <p>📧 Contact: YOUR_EMAIL_HERE</p>
+    <p style="margin-top:10px;">“Rabbi zidni ilma.”</p>
 </footer>
 
 </body>
