--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ We focus on Olympiad-level thinking and deep understanding.
 </div>
 
 <footer>
-<p>“ رَبِّ زِدْنِي عِلْمًا”</p>
+<p>“ Where Prime number ends , Prime A begins”</p>
 </footer>
 
 </body>
