--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@ Join Our Discord Server
 
 <div class="card">
 <h2>Email</h2>
-<p>📧 YOUR_EMAIL_HERE</p>
+<p>📧 prime843a@gmail.com</p>
 </div>
 
 </div>
